# aporia-fe-home-assignment-fida

./: README.md
pokemon-server/: README.md  package-lock.json  pyproject.toml
pokemon-server/pokedex-fida/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tsconfig.config.json
pokemon-server/pokedex-fida/src/: App.vue  main.ts
pokemon-server/pokedex-fida/src/assets/: main.css
pokemon-server/pokedex-fida/src/router/: index.ts
pokemon-server/pokedex-fida/src/stores/: pokeStore.ts
pokemon-server/pokedex-fida/src/views/: HomePage.vue  SinglePokemon.vue  functions.ts
pokemon-server/pokemon_server/: data.json  main.py
pokemon-server/tests/: test_pokemon_server.py
