[tool.poetry]
name = "pokemon-server"
version = "0.1.0"
description = ""
authors = ["Yaniv Zohar <yaniv.zoh@gmail.com>"]

[tool.poetry.scripts]
server = "pokemon_server.main:run_local"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
